@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - fix: column headers where not shown in result table on console page
+   when two or more columns with the same name were selected
+
  - fix: charts are not correctly displayed in Microsoft Edge browser.
 
 2015/10/30 0.15.3
